--- a/control
+++ b/control
@@ -1,9 +1,22 @@
 Package: com.haoict.redditnoads
 Name: Reddit No Ads
-Depends: mobilesubstrate
-Version: 0.0.1
+Depends: mobilesubstrate, preferenceloader, com.haoict.libhdev (>= 2.0.0), firmware (>= 10)
+Version: 1.0.0
 Architecture: iphoneos-arm
-Description: Hide "Promoted" post for Reddit app
+Description: Free & Open Source Tweak for Reddit
+ Free & Open Source Tweak for Reddit
+ Change log: https://github.com/haoict/redditnoads/releases
+ . 
+ Features:
+ - Remove Ads
+ - Lightweight
+ - Support iOS 10 (not tested) - 11 (tested) - 12 (tested) - 13 (tested)
+ - Support latest Reddit version (If it doesn't work, you should update the app to latest version)
+ . 
+ I work very hard to make good, free and open source tweaks for everyone
+ If you want to support, you can buy me a coffee at https://www.paypal.me/haoict
+ . 
+ Thanks a ton
 Maintainer: Hao Nguyen
 Author: Hao Nguyen
 Section: Tweaks
